syntax = "proto3";

option csharp_namespace = "CatalogService";

service GrpcCatalog {
  rpc GetGames (GetGamesRequest) returns (GetGamesResponse) {}
}

message GetGamesRequest {
  repeated ShoppingCartItem items = 1;
}

message ShoppingCartItem {
  string gameId = 1;
}

message GetGamesResponse {
  repeated GameItem items = 1;
}

message GameItem {
  string gameId = 1;
  string name = 2;
  double price = 3;
  uint32 availableStock = 4;
  string imageUrl = 5;
}